--- a/app/src/main/res/color/selector.xml
+++ b/app/src/main/res/color/selector.xml
@@ -4,6 +4,6 @@
     <item android:state_selected="true" android:color="@color/accent" />
     <item android:state_focused="true" android:color="@color/accent" />
     <item android:state_pressed="true" android:color="@color/accent" />
-    <item android:color="@android:color/transparent" />
+    <item android:color="@color/secondary_text" />
 
 </selector>
